Iterazione 2
Modifiche minori